Setting up dashboard

--- a/package.json
+++ b/package.json
@@ -7,20 +7,32 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "update-db": "node scripts/update-database.js"
   },
   "dependencies": {
+    "@esri/arcgis-rest-auth": "^3.7.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@supabase/supabase-js": "^2.46.1",
+    "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "csv-writer": "^1.6.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "esri-leaflet": "^3.0.13",
+    "esri-leaflet-vector": "^4.2.5",
     "framer-motion": "^11.11.17",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.460.0",
@@ -30,7 +42,8 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "recharts": "^2.13.3",
-    "tailwind-merge": "^2.5.4",
+    "shadcn-ui": "^0.9.3",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
