--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "update-db": "node scripts/update-database.js"
+    "update-db": "node scripts/update-database.js",
+    "update-cc": "node scripts/update-cc-database.js",
+    "match-cc-da": "node scripts/match-cc-da.js"
   },
   "dependencies": {
     "@esri/arcgis-rest-auth": "^3.7.0",
@@ -41,6 +43,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-split": "^2.0.14",
     "recharts": "^2.13.3",
     "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^2.5.5",
